// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Row should render stocked product 1`] = `
<tbody>
  <tr>
    <td>
      Baseball
    </td>
    <td>
      $9.99
    </td>
  </tr>
</tbody>
`;

exports[`Product Row should render with unstocked product 1`] = `
<tbody>
  <tr>
    <td>
      <span
        style="color: red;"
      >
        Basketball
      </span>
    </td>
    <td>
      $29.99
    </td>
  </tr>
</tbody>
`;
